--- a/client/src/App.css
+++ b/client/src/App.css
@@ -98,7 +98,7 @@ body {
   left: 0%;
   top: 10%;
   width: 100%;
-  height: 80%;
+  height: 90%;
   background-color: var(--swatch-primary);
 }
 
@@ -117,11 +117,47 @@ body {
   top: 90%;
   width: 100%;
   height: 10%;
-  background-color: lightsalmon;
+  background-color: var(--swatch-primary);
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 36pt;
+}
+
+#top5-homebutton{
+  position: absolute;
+  left: 5%;
+}
+
+#top5-groupsbutton{
+  position: absolute;
+  left: 10%;
+}
+
+#top5-personbutton{
+  position: absolute;
+  left: 15%;
+}
+
+#top5-sigmabutton{
+  position: absolute;
+  left: 20%;
+}
+
+#top5-searchbar{
+  position: absolute;
+  left: 35%;
+}
+
+#top5-sortText{
+  position: absolute;
+  top: 20%;
+  left: 85%;
+}
+
+#top5-sortbutton{
+  position: absolute;
+  left: 90%
 }
 
 #list-selector-heading {
@@ -130,12 +166,12 @@ body {
   top: 0%;
   width: 100%;
   height: 10%;
-  text-align: center;
+  /* text-align: center; */
   font-size: 24pt;
   font-weight: bold;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center;
+  justify-content: center; */
 }
 
 #add-list-button {
@@ -147,7 +183,7 @@ body {
   left: 0%;
   top: 10%;
   width: 100%;
-  height: 90%;
+  height: 83%;
   display: flex;
   flex-direction: column;
   overflow: scroll;
