--- a/client/src/App.css
+++ b/client/src/App.css
@@ -104,11 +104,32 @@ body {
 
 #top5-workspace {
   position: absolute;
-  left: 0%;
+  left: 5%;
   top: 10%;
-  width: 100%;
-  height: 80%;
-  background-color: var(--swatch-accent);
+  width:90%;
+  height: 85%;
+  background-color: var(--swatch-primary);
+}
+
+#top5-workspace-textfield{
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  width:100%;
+  height: 82%;
+  background-color: rgb(32, 243, 250);
+  border-radius: 20px;
+  /* background-color: rgb(32, 243, 250); */
+}
+#top5-workspace-textfield-part2{
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  width:100%;
+  height: 93%;
+  background-color: rgb(0, 117, 250);
+  border-radius: 25px;
+  /* background-color: rgb(0, 117, 250); */
 }
 
 #top5-statusbar {
@@ -225,33 +246,82 @@ body {
   float: right;
   transform: scale(2);
 }
+#workspace-list-name{
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  width: 100%;
+  background-color: var(--swatch-primary);
+}
 
 #workspace-home,
 #workspace-edit {
   position: absolute;
   left: 0%;
-  top: 0%;
+  top: 10%;
   width: 100%;
   height: 100%;
+  background-color: var(--swatch-primary);
 }
 
 #edit-numbering {
   position: absolute;
   left: 0%;
-  top: 0%;
-  width: 20%;
+  top: 1.5%;
+  width: 7.5%;
   height: 100%;
-  background-color: var(--swatch-status);
+  background-color: var(--swatch-primary);
 }
 
 #edit-items {
   position: absolute;
-  left: 20%;
+  left: 10%;
   top: 0%;
   width: 80%;
   height: 100%;
   background-color: var(--swatch-primary);
 }
+
+#save-button{
+  position: absolute;
+  left:73%;
+  top: 91%;
+  background-color:rgb(255, 251, 0);
+}
+#publish-button{
+  position: absolute;
+  left:80%;
+  top:91%;
+  background-color: rgb(255, 251, 0);
+}
+
+.item-number-border {
+  justify-content: center;
+  width: 100%;
+  left: 20%;
+  /* border: 1px 0px 1px 1px; */
+  border-color: black;
+  background-color: linen;
+  color: black;
+  display: flex;
+  align-items: center;
+  font-size: 48pt;
+}
+.item-number-corresponding-item {
+  justify-content: center;
+  width: 90%;
+  border: 1px 0px 1px 1px;
+  border: solid;
+  background-color: linen;
+  color: black;
+  display: flex;
+  align-items: left;
+  font-size: 40pt;
+}
+#list-shape{
+  border-radius: 25px;
+}
+
 
 .item-number,
 .top5-item,
@@ -259,7 +329,7 @@ body {
   display: flex;
   align-items: center;
   font-size: 48pt;
-  height: 20%;
+  height: 15%;
 }
 
 .item-number {
