--- a/client/src/App.css
+++ b/client/src/App.css
@@ -117,13 +117,12 @@ body {
 
 #top5-workspace-textfield{
   position: absolute;
-  left: 0%;
-  top: 0%;
-  width:100%;
-  height: 82%;
-  background-color: rgb(32, 243, 250);
+  left: 2.5%;
+  top: 14%;
+  width:95%;
+  height: 65%;
+  background-color: #2c2f70;
   border-radius: 20px;
-  /* background-color: rgb(32, 243, 250); */
 }
 #top5-workspace-textfield-part2{
   position: absolute;
@@ -131,9 +130,8 @@ body {
   top: 0%;
   width:100%;
   height: 93%;
-  background-color: rgb(0, 117, 250);
+  background-color: #d4d4f5;
   border-radius: 25px;
-  /* background-color: rgb(0, 117, 250); */
 }
 
 #top5-statusbar {
@@ -301,22 +299,26 @@ body {
 
 .item-number-border {
   justify-content: center;
-  width: 100%;
-  left: 20%;
+  border-radius: 3pt;
+  left: 1%;
   /* border: 1px 0px 1px 1px; */
   /* border-color: black; */
-  background-color: rgb(255, 193, 78);
+  background-color: #d4af37;
   color: black;
   display: flex;
   align-items: center;
   font-size: 40pt;
 }
 .list-name-corresponding-list{
-  justify-content: left;
-  width: 90%;
-  /* border: 1px 0px 1px 1px;
-  border: solid; */
-  background-color: rgb(216, 128, 40);
+  position: absolute;
+  justify-content: center;
+  top: 2%;
+  left: 2.5%;
+  width: 60%;
+  border: 1px 0px 1px 1px;
+  border-radius: 5pt;
+  /* border: solid; */
+  background-color: #ffffff;
   color: black;
   display: flex;
   align-items: left;
@@ -325,10 +327,12 @@ body {
 
 .item-number-corresponding-item {
   justify-content: center;
+  left: 2%;
   width: 90%;
+  border-radius: 3pt;
   /* border: 1px 0px 1px 1px; */
   /* border: solid; */
-  background-color: rgb(255, 193, 78);
+  background-color: #d4af37;
   color: black;
   display: flex;
   align-items: left;
