--- a/client/src/App.css
+++ b/client/src/App.css
@@ -288,13 +288,13 @@ body {
   position: absolute;
   left:73%;
   top: 91%;
-  background-color:rgb(255, 251, 0);
+  background-color:#dddddd;
 }
 #publish-button{
   position: absolute;
   left:80%;
   top:91%;
-  background-color: rgb(255, 251, 0);
+  background-color: #dddddd;
 }
 
 .item-number-border {
@@ -338,8 +338,53 @@ body {
   align-items: left;
   font-size: 40pt;
 }
-#list-shape{
-  border-radius: 25px;
+#itemListBoard {
+  position: relative;
+  left: 0%;
+  top: 0%;
+  width: 97%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #2c2f70;
+  border-radius: 10pt;
+}
+.item-list-board-item{
+  position: relative;
+  display: flex;
+  font-size: 35pt;
+  color: #ceaa39;
+  left: 5%;
+}
+#commentBoard{
+  position: relative;
+  left: 0%;
+  top: 0%;
+  width: 97%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #d4d4f5;
+  border-radius: 10pt;
+}
+#commentBoardComment{
+  width: 97%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  background-color: #d4d4f5;
+  overflow: scroll;
+}
+#commentBoardTextField{
+  position: relative;
+  left: 0%;
+  top: 2%;
+  width: 97%;
+  height: 18%;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff9f9;
+  border-radius: 10pt;
 }
 
 
