--- a/client/src/App.css
+++ b/client/src/App.css
@@ -343,7 +343,7 @@ body {
   left: 0%;
   top: 0%;
   width: 97%;
-  height: 100%;
+  height: 260pt;
   display: flex;
   flex-direction: column;
   background-color: #2c2f70;
@@ -353,6 +353,7 @@ body {
   position: relative;
   display: flex;
   font-size: 35pt;
+  margin-top: 10pt;
   color: #ceaa39;
   left: 5%;
 }
@@ -361,30 +362,39 @@ body {
   left: 0%;
   top: 0%;
   width: 97%;
-  height: 100%;
+  height: 260pt;
   display: flex;
   flex-direction: column;
   background-color: #d4d4f5;
   border-radius: 10pt;
 }
 #commentBoardComment{
+  position: relative;
   width: 97%;
-  height: 80%;
+  height: 222pt;
   display: flex;
   flex-direction: column;
   background-color: #d4d4f5;
+  align-items: center;
   overflow: scroll;
+}
+.comment-list-comment{
+  position: relative;
+  display: flex;
+  font-size: 35pt;
+  color: #ceaa39;
+  left: 5%;
 }
 #commentBoardTextField{
   position: relative;
   left: 0%;
   top: 2%;
   width: 97%;
-  height: 18%;
+  height: 38pt;
   display: flex;
   flex-direction: column;
   background-color: #fff9f9;
-  border-radius: 10pt;
+  border-radius: 5pt;
 }
 
 
