like and dislike system + post comment finished

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -375,7 +375,7 @@ body {
   display: flex;
   flex-direction: column;
   background-color: #d4d4f5;
-  align-items: center;
+  align-items: left;
   overflow: scroll;
 }
 .comment-list-comment{
